--- a/HangfireSample.Service/HangfireSample.Service.csproj
+++ b/HangfireSample.Service/HangfireSample.Service.csproj
@@ -14,4 +14,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\" />
+    <Folder Include="Web\" />
+  </ItemGroup>
+
 </Project>
